--- a/TortillasCebanc/app/src/main/res/layout/activity_elegir_bebidas.xml
+++ b/TortillasCebanc/app/src/main/res/layout/activity_elegir_bebidas.xml
@@ -75,7 +75,8 @@
         android:id="@+id/button3"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="salirAplicacion" />
 
     <Button
         android:layout_width="wrap_content"
