--- a/TortillasCebanc/app/src/main/res/layout/activity_elegir_bebidas.xml
+++ b/TortillasCebanc/app/src/main/res/layout/activity_elegir_bebidas.xml
@@ -71,7 +71,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/salir"
+        android:text="@string/atras"
         android:id="@+id/button3"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
