--- a/TortillasCebanc/app/src/main/res/layout/activity_elegir_bebidas.xml
+++ b/TortillasCebanc/app/src/main/res/layout/activity_elegir_bebidas.xml
@@ -31,9 +31,8 @@
         android:layout_height="wrap_content"
         android:text="Cantidad"
         android:id="@+id/textView2"
-        android:layout_marginBottom="81dp"
         android:textSize="20dp"
-        android:layout_above="@+id/lblMensaje"
+        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -41,31 +40,50 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/txtCantidad"
-        android:layout_alignTop="@+id/textView2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="31dp"
-        android:layout_alignRight="@+id/textView2"
-        android:layout_alignEnd="@+id/textView2"
         android:inputType="number"
-        android:maxLength="2"/>
+        android:maxLength="2"
+        android:layout_alignTop="@+id/textView2"
+        android:layout_alignRight="@+id/cmbOpciones"
+        android:layout_alignEnd="@+id/cmbOpciones"
+        android:layout_toRightOf="@+id/button3"
+        android:layout_toEndOf="@+id/button3" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="@string/siguiente"
         android:id="@+id/button"
         android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/textView"
-        android:layout_toEndOf="@+id/textView" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/lblMensaje"
         android:textSize="20dp"
-        android:layout_above="@+id/button"
+        android:text="Precio"
+        android:layout_marginBottom="65dp"
+        android:layout_above="@+id/button3"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:text="Precio" />
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/salir"
+        android:id="@+id/button3"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/añadir"
+        android:id="@+id/btnAñadir"
+        android:layout_below="@+id/txtCantidad"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
